cmake_minimum_required(VERSION 3.29)
project(Data_Structures_and_Algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(Data_Structures_and_Algorithm
    learning/minMax.cpp
    learning/printN.cpp
    learning/recursion.cpp
    learning/sumOfDigits.cpp
    Week1/module1/example1.cpp
    Week1/module1/example2.cpp
    Week1/module1/example3.cpp
    Week1/floraldeClass.cpp
    Week1/rectangle.cpp
    Week1/studentRecord.cpp
    Week1/tesla.cpp
    Week2/ex2.cpp
    Week2/ex3.cpp
    Week2/ex4.cpp
    Week2/exampule_1.cpp
    Week2/TemperatureConverter.cpp
    Week3/array.cpp
    Week3/array2.cpp
    Week3/array3.cpp
    Week3/array4.cpp
    Week3/array5.cpp
    Week3/arrayFive.cpp
    Week3/exampleOne.cpp
    Week3/exampleThree.cpp
    Week3/exampleTwo.cpp
    Week4/main.cpp
    Week4/MultiDimensionalArrays.cpp
    Week5/prelim.cpp
    Week6/drawRecursion.cpp
    main.cpp)
